src/objects/Intervention__c.object
<CustomObject>
    <description>NOTES Interventions are the actual things done to meet an Objective under a Plan. Interventions are related to a Plan by way of Objectives. Interventions are master-detail to Objectives.</description>
    <fields>
        <fullName>Intervention_Description__c</fullName>
        <description>Detailed description of an intervention</description>
        <label>Intervention Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intervention_Name__c</fullName>
        <description>A short description of an intervention</description>
        <label>Intervention Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Interventions</relationshipLabel>
        <relationshipName>Interventions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_term_Goal__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The parent objective which this intervention contributes to achieving</description>
        <label>Short-term Goal</label>
        <referenceTo>Short_Term_Goal__c</referenceTo>
        <relationshipLabel>Interventions</relationshipLabel>
        <relationshipName>Interventions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>forDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>forDeletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>helperId_Objective__c</fullName>
        <description>Soft Lookup to helperId of Objective</description>
        <label>helperId Objective</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>helperId__c</fullName>
        <description>This is helper ID for saving. Id is created in class.</description>
        <label>helperId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Intervention</label>
    <nameField>
        <displayFormat>I-{000000000}</displayFormat>
        <label>Intervention ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interventions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>